--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,9 @@
-bcc: parser.tab.c lex.yy.c head.h ast.h
-	g++ parser.tab.c lex.yy.c -lfl -o bcc -std=c++11
+CFLAGS = -lfl `llvm-config-3.8 --cxxflags --cppflags mcjit native --ldflags --libs core ` -ltinfo -lpthread -ldl
+FLAGS=-w -Wno-deprecated -g -std=c++11
+
+bcc: parser.tab.c lex.yy.c head.h ast.h ast.cpp
+	g++ $(FLAGS) parser.tab.c lex.yy.c ast.cpp -o bcc $(CFLAGS)
+
 
 parser.tab.c: parser.y
 	bison -d parser.y
